# performanceWidget

./: CMakeLists.txt  README.md
dataQuery/: CMakeLists.txt  dataquery.h  queryresource.cpp  queryresource.h  valuecache.cpp  valuecache.h
painters/: CMakeLists.txt  barspainter.cpp  graphmulticolorpainter.cpp  graphpainter.cpp  painterutils.cpp  performancepainter.cpp  performancepainter.h
widgets/: CMakeLists.txt  cpuwidget.cpp  performancewidget.cpp
